within ease added

--- a/index-2.html
+++ b/index-2.html
@@ -2,13 +2,13 @@
 <html lang="zxx">
 
 
-<!-- Mirrored from soyonexpress.com/html-demos/envarch/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Apr 2025 17:20:00 GMT -->
+<!-- Mirrored from soyonexpress.com/html-demos/Rajhans/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Apr 2025 17:20:00 GMT -->
 <head>
     <meta charset="utf-8">
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>EnvArch - Architecture and Single Property HTML5 Template</title>
+    <title>Rajhans - Architecture and Single Property HTML5 Template</title>
 
     <!-- Fav Icons -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
@@ -153,7 +153,7 @@
 
                 <!--Appointment Form-->
                 <div class="appointment-form">
-                    <form method="post" action="https://soyonexpress.com/html-demos/envarch/contact.html">
+                    <form method="post" action="https://soyonexpress.com/html-demos/Rajhans/contact.html">
                         <div class="form-group">
                             <input type="text" name="text" value="" placeholder="Name" required>
                         </div>
@@ -723,7 +723,7 @@
                             <a href="#"><i class="fab fa-pinterest-p"></i></a>
                         </div>
                        <div class="copyright">
-                            <p>© Copyright 2020 by <a href="#">Envarch</a></p>
+                            <p>© Copyright 2020 by <a href="#">Rajhans</a></p>
                         </div>
                    </div>
                </div>
@@ -759,5 +759,5 @@
 </body>
 
 
-<!-- Mirrored from soyonexpress.com/html-demos/envarch/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Apr 2025 17:20:00 GMT -->
+<!-- Mirrored from soyonexpress.com/html-demos/Rajhans/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Apr 2025 17:20:00 GMT -->
 </html>
