--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <li class="current"><a href="#">Home</a></li>
-                                        <li><a href="#">Pricing Plans</a></li>
-                                        <li><a href="#">About Us</a></li>
+                                        <li><a href="#pricing-plans">Pricing Plans</a></li>
+                                        <li><a href="#about-us">About Us</a></li>
                                         <li><a href="#">Amenities</a></li>
                                         <li><a href="#">Floor Plans</a></li>
                                         <li><a href="#">Contact us</a></li>
                                     </ul>
-                                </div>
+                                </div>  
 
                             </nav>
                             <!-- Main Menu End-->
@@ -350,7 +350,7 @@
 
 
 
-<div style="text-align: center; margin-bottom: 20px;">
+<div style="text-align: center; margin-bottom: 20px;" div id="pricing-plans" class="section">
   <h3 style="color: #070707; margin-bottom: 15px; font-size: 24px;">Pricing Plans</h3>
 </div>
 
@@ -483,7 +483,7 @@
 
         
 
-        <section id="about-us" style="text-align: center; padding: 40px;">
+        <section id="about-us" style="text-align: center; padding: 40px;" div id="about-us" class="section">
             <h2>About Us</h2>
             
             <div style="display: flex; justify-content: center; gap: 40px; align-items: center; flex-wrap: wrap;">
